created yellowstone eda

--- a/eda_yellowstone.ipynb
+++ b/eda_yellowstone.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "data=pd.read_csv('riohondo.csv')\n",
+    "data=pd.read_csv('download.csv')\n",
     "\n",
     "data['datetime'] = pd.to_datetime(data['datetime'])\n",
     "\n",
