--- a/eda_yellowstone.ipynb
+++ b/eda_yellowstone.ipynb
@@ -27,6 +27,7 @@
     }
    ],
    "source": [
+    "# import libraries\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import pandas as pd\n",
