renamed yellowstone to include ID num

--- a/eda_yellowstone6295000.ipynb
+++ b/eda_yellowstone6295000.ipynb
@@ -53,7 +53,7 @@
     "#data=pd.read_csv('yellowstone.tsv', sep='\\t')\n",
     "\n",
     "# save as csv\n",
-    "#data.to_csv('yellowstone.csv', index=False)\n",
+    "#data.to_csv('yellowstone629.csv', index=False)\n",
     "\n",
     "#This was only needed once to convert the tsv to csv"
    ]
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "data=pd.read_csv('yellowstone.csv')\n",
+    "data=pd.read_csv('yellowstone6295000.csv')\n",
     "\n",
     "data['datetime'] = pd.to_datetime(data['datetime'])\n",
     "\n",
