end of day update

--- a/eda_yellowstone6192500.ipynb
+++ b/eda_yellowstone6192500.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +46,10 @@
    ],
    "source": [
     "# open the tsv file\n",
-    "data=pd.read_csv('yellowstone.tsv', sep='\\t')\n",
+    "# data=pd.read_csv('yellowstone.tsv', sep='\\t')\n",
     "\n",
     "# save as csv\n",
-    "data.to_csv('yellowstone6192500.csv', index=False)\n",
+    "# data.to_csv('yellowstone6192500.csv', index=False)\n",
     "\n",
     "#This was only needed once to convert the tsv to csv"
    ]
