--- a/eda_yellowstone6192500.ipynb
+++ b/eda_yellowstone6192500.ipynb
@@ -58,7 +58,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EDA"
+    "# EDA\n",
+    "This project is an effort to see if the spring increase in discharge can be predicted from publicly available streamflow data.\n",
+    "\n",
+    "The Yellowstone river was selected as it is an undammed river with readily accessible data. \n",
+    "\n",
+    "The data is from the Yellowstone river at Livingston MT. The data is from the USGS and is available at https://waterdata.usgs.gov/mt/nwis/uv?site_no=06192500\n"
    ]
   },
   {
@@ -134,6 +139,13 @@
     "\n",
     "# Plot the data\n",
     "data.plot(x='datetime', y='discharge')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this chart we can see that there is indeed an increase of discharge every spring.  However, the magnitude of this increase varies quite a bit from year to year."
    ]
   },
   {
@@ -537,6 +549,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not only does the magnitude of the spring discharge increase every year, the mean discharge for each year also varies by quite a bit.  This is likely due to the amount of snowpack in the mountains that feed the river.  A potential future question is whether the amount of snowpack can be used to predict the spring discharge increase.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -915,6 +934,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This chart examines the 2021 vs the 2022 data.  There is quite a difference between the two.  2021's spring increase started earlier.  2022 had a much higher peak discharge than 2021.  I suspect that the amount of snowpack in the mountains was much less during 2021.  This is a potential future question to investigate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -949,6 +975,13 @@
     "plt.title('Yellowstone streamflow 2021-2023')\n",
     "plt.ylabel('Discharge (cubic feet/s)')\n",
     "plt.xlabel('Day of the year')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to the previous graph.  2023 data had a similar onset time as 2021.  The peak discharge is slightly more than 2021; bot not anywhere close to 2022.  "
    ]
   },
   {
@@ -1186,6 +1219,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Box and whisker plots for each week of the year.  There are many outliers during the spring and summer months.  This fits with what we already saw earlier that there is a lot of variability in the peak discharge for a given year."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1223,7 +1263,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prediction"
+    "Similar to the previous plot.  This plot is aggregating the data by month.  We can reach a similar conclusion though.  There is a lot of variability in the peak discharge for a given year."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediction\n",
+    "This is an effort to predict the spring increase in discharge.  The data is from the Yellowstone river at Livingston MT. The data is from the USGS and is available at https://waterdata.usgs.gov/mt/nwis/uv?site_no=06192500   \n",
+    "\n",
+    "Ideally we would like to predict both the onset of the spring increase and the peak discharge.   "
    ]
   },
   {
@@ -1270,6 +1320,13 @@
     "plt.title('Training vs. Test Data for Streamflow Prediction')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Discharge (cu ft/s)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model will be trained on data from the years preceeding 2023.  The model will be tested on the 2023-2024 data.  "
    ]
   },
   {
@@ -1818,6 +1875,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The day of the year is the most important variable in predicting the onset of the discharge."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1850,6 +1914,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a plot of the model prediction vs the actual 2023 data.  The timing of the onset looks really good.  However, the peak discharge is off a bit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1879,6 +1950,13 @@
     "predicted_2024 = test[test['year'] == 2024]\n",
     "predicted_2024.plot(y=['discharge', 'prediction'])\n",
     "plt.title('Model vs. 2024 Discharge Data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like the 2023 data, the model prediction for the 2024 data looks good for the onset of the discharge.  The peak discharge is off a bit again.  It seems that the model is underpredicting the peak discharge.  I suspect that this has something to do with the amount of snowpack in the mountains.  This is a potential future question to investigate.  Average daily temperatures could also be a useful variable to include in the model.  This should be the next step in improving the model."
    ]
   }
  ],
