--- a/eda_yellowstone_stream_snow_wx.ipynb
+++ b/eda_yellowstone_stream_snow_wx.ipynb
@@ -3796,7 +3796,8 @@
     "plt.title('LSTM Model Predictions for 2023')\n",
     "plt.xlabel('Time Step')\n",
     "plt.ylabel('Discharge (Normalized)')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n"
    ]
   }
  ],
