--- a/eda_yellowstone6192500.ipynb
+++ b/eda_yellowstone6192500.ipynb
@@ -1955,6 +1955,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_2025 = test[test['year'] == 2025]\n",
+    "predicted_2025.plot(y=['discharge', 'prediction'])\n",
+    "plt.title('Model vs. 2025 Discharge Data')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
