working on this some more

--- a/eda_yellowstone6192500.ipynb
+++ b/eda_yellowstone6192500.ipynb
@@ -1254,7 +1254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to the previous plot.  This plot is aggregating the data by month.  We can reach a similar conclusion though.  There is a lot of variability in the peak discharge for a given year."
+    "Similar to the previous plot.  This plot is aggregating the data by month.  We can reach a similar conclusion though.  There is a lot of variability in the peak discharge for a given year.  Also, we can see some outliers during the winter months of December through February that are lower.  I wonder if this is due to very cold temperatures ."
    ]
   },
   {
