back to work this morning

--- a/eda_yellowstone6192500.ipynb
+++ b/eda_yellowstone6192500.ipynb
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,9 @@
     "plt.axhline(y=overall_mean, color='red', label='30-year average')\n",
     "plt.title(\"Yellowstone mean discharge per year (1995-2024)\")\n",
     "plt.plot(2024, mean_discharge[2024])\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    " \n",
+    " "
    ]
   },
   {
