--- a/eda_yellowstone6192500.ipynb
+++ b/eda_yellowstone6192500.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,9 @@
     "# save as csv\n",
     "# data.to_csv('yellowstone6192500.csv', index=False)\n",
     "\n",
-    "#This was only needed once to convert the tsv to csv"
+    "#This was only needed once to convert the tsv to csv\n",
+    "\n",
+    "#there is now a new script that runs and fetches the data from the API"
    ]
   },
   {
@@ -59,34 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1473710/3472359544.py:1: DtypeWarning: Columns (4,6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data=pd.read_csv('yellowstone6192500.csv')\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  agency_cd       id            datetime timezone discharge discharge_quality  \\\n",
-      "0      USGS  6192500 1995-10-01 00:15:00      MDT      2210            A:[91]   \n",
-      "1      USGS  6192500 1995-10-01 00:30:00      MDT      2210            A:[91]   \n",
-      "2      USGS  6192500 1995-10-01 00:45:00      MDT      2200            A:[91]   \n",
-      "3      USGS  6192500 1995-10-01 01:00:00      MDT      2210            A:[91]   \n",
-      "4      USGS  6192500 1995-10-01 01:15:00      MDT      2200            A:[91]   \n",
-      "\n",
-      "  gage_height gage_height_quality  \n",
-      "0         NaN                 NaN  \n",
-      "1         NaN                 NaN  \n",
-      "2         NaN                 NaN  \n",
-      "3         NaN                 NaN  \n",
-      "4         NaN                 NaN  \n"
+      "  agency_cd         id            datetime timezone discharge\n",
+      "0      USGS  6192500.0 1995-10-01 00:15:00      MDT      2210\n",
+      "1      USGS  6192500.0 1995-10-01 00:30:00      MDT      2210\n",
+      "2      USGS  6192500.0 1995-10-01 00:45:00      MDT      2200\n",
+      "3      USGS  6192500.0 1995-10-01 01:00:00      MDT      2210\n",
+      "4      USGS  6192500.0 1995-10-01 01:15:00      MDT      2200\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_134614/3472359544.py:1: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data=pd.read_csv('yellowstone6192500.csv')\n"
      ]
     }
    ],
@@ -96,6 +91,28 @@
     "data['datetime'] = pd.to_datetime(data['datetime'])\n",
     "\n",
     "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       agency_cd         id            datetime timezone discharge\n",
+      "984697      USGS  6192500.0 2025-03-17 03:15:00      MDT      1160\n",
+      "984698      USGS  6192500.0 2025-03-17 03:30:00      MDT      1170\n",
+      "984699      USGS  6192500.0 2025-03-17 03:45:00      MDT      1160\n",
+      "984700      USGS  6192500.0 2025-03-17 04:00:00      MDT      1180\n",
+      "984701       NaN        NaN                 NaT      NaN       NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.tail())"
    ]
   },
   {
