fetching noaa data

--- a/fetch_data.ipynb
+++ b/fetch_data.ipynb
@@ -272,6 +272,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most recent date in noaa_data.csv: 2024-08-19\n",
+      "noaa_data.csv exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if os.path.exists('noaa_data.csv'):\n",
+    "    df_noaa_existing = pd.read_csv('noaa_data.csv')\n",
+    "    most_recent_noaa_date = df_noaa_existing['date'].max()\n",
+    "    print(f\"Most recent date in noaa_data.csv: {most_recent_noaa_date}\")\n",
+    "    print(\"noaa_data.csv exists.\")\n",
+    "else:\n",
+    "    print(\"noaa_data.csv does not exist.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'DATE': '2024-08-19', 'STATION': 'USS0010E03S', 'TMAX': '  252', 'TAVG': '  157', 'TMIN': '   77', 'PRCP': '    0', 'SNWD': '    0'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example url: https://www.ncei.noaa.gov/access/services/data/v1?dataset=global-summary-of-the-year&dataTypes=DP01,DP05,DP10,DSND,DSNW,DT00,DT32,DX32,DX70,DX90,SNOW,PRCP&stations=ASN00084027&startDate=1952-01-01&endDate=1970-12-31&includeAttributes=true&format=json\n",
+    "# This is a valuable source: https://github.com/partytax/ncei-api-guide?tab=readme-ov-file \n",
+    "\n",
+    "dataset = 'daily-summaries'\n",
+    "data_types = 'TAVG, TMIN, TMAX, SNWD, WESD, PRCP'\n",
+    "stations = 'USS0010E03S'\n",
+    "start_date = most_recent_noaa_date\n",
+    "# start_date = '1995-10-01'\n",
+    "end_date = '2024-10-01'\n",
+    "include_attributes = 'false'\n",
+    "format = 'json'\n",
+    "\n",
+    "url = f'https://www.ncei.noaa.gov/access/services/data/v1?dataset={dataset}&dataTypes={data_types}&stations={stations}&startDate={start_date}&endDate={end_date}&includeAttributes={include_attributes}&format={format}'\n",
+    "response = requests.get(url)\n",
+    "noaa_data = json.loads(response.text)\n",
+    "print(noaa_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            date      station   tmin   tmax   tavg   prcp   wesd\n",
+      "0     2015-10-01  USS0010E03S     57    163    101     25      0\n",
+      "1     2015-10-02  USS0010E03S     57    123     78     25      0\n",
+      "2     2015-10-03  USS0010E03S      4     67     45     51      0\n",
+      "3     2015-10-04  USS0010E03S      5     88     40     25      0\n",
+      "4     2015-10-05  USS0010E03S      0    158     64      0      0\n",
+      "...          ...          ...    ...    ...    ...    ...    ...\n",
+      "3235  2024-08-15  USS0010E03S     18    210    100      0      0\n",
+      "3236  2024-08-16  USS0010E03S     21    210    115      0      0\n",
+      "3237  2024-08-17  USS0010E03S     29    263    144      0      0\n",
+      "3238  2024-08-18  USS0010E03S     69    253    157      0      0\n",
+      "3239  2024-08-19  USS0010E03S     77    252    157      0    NaN\n",
+      "\n",
+      "[3240 rows x 7 columns]\n",
+      "Headers are the same.\n",
+      "Data saved to noaa_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the noaa_data list of dictionaries into a DataFrame\n",
+    "df_noaa = pd.DataFrame(noaa_data)\n",
+    "\n",
+    "# Select the required columns and rename them\n",
+    "df_noaa = df_noaa[['DATE', 'STATION', 'TMIN', 'TMAX', 'TAVG', 'PRCP', 'WESD']]\n",
+    "df_noaa.columns = ['date', 'station', 'tmin', 'tmax', 'tavg', 'prcp', 'wesd']\n",
+    "\n",
+    "print(df_noaa)\n",
+    "\n",
+    "# Load the existing NOAA data\n",
+    "df_noaa_existing = pd.read_csv('noaa_data.csv')\n",
+    "\n",
+    "# Check if the headers match\n",
+    "if list(df_noaa.columns) == list(df_noaa_existing.columns):\n",
+    "    print(\"Headers are the same.\")\n",
+    "else:\n",
+    "    print(\"Headers are different.\")\n",
+    "\n",
+    "# Append the new NOAA data\n",
+    "df_noaa_combined = pd.concat([df_noaa_existing, df_noaa], ignore_index=True)\n",
+    "\n",
+    "# Drop duplicates based on the 'date' column\n",
+    "df_noaa_combined.drop_duplicates(subset=['date'], keep='last', inplace=True)\n",
+    "\n",
+    "\n",
+    "# save this data to a csv file\n",
+    "df_noaa_combined.to_csv('noaa_data.csv', index=False)\n",
+    "print(\"Data saved to noaa_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
