all data collected

--- a/fetch_data.ipynb
+++ b/fetch_data.ipynb
@@ -387,11 +387,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Weather data hack\n",
+    "Try to avoid running the cells below.  The noaa api does not make the last 6 months of data available.  I had to manually import it from a csv file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       STATION           NAME        DATE  PRCP  TAVG  TMAX  TMIN  TOBS  WESD\n",
+      "0  USS0010E03S  CANYON, WY US  2024-12-31   NaN   NaN   NaN   NaN    10   4.4\n",
+      "1  USS0010E03S  CANYON, WY US  2025-01-01   0.2  11.0  16.0   8.0    11   4.6\n",
+      "2  USS0010E03S  CANYON, WY US  2025-01-02   0.4  20.0  25.0  11.0    24   5.1\n",
+      "3  USS0010E03S  CANYON, WY US  2025-01-03   0.3  28.0  32.0  24.0    27   5.4\n",
+      "4  USS0010E03S  CANYON, WY US  2025-01-04   0.1  24.0  28.0  19.0    19   5.5\n",
+      "         date      station   tmin  tmax  tavg   prcp   wesd\n",
+      "0  1995-10-01  USS0010E03S  -71.0  62.0  -1.0    0.0    0.0\n",
+      "1  1995-10-02  USS0010E03S -117.0  73.0 -21.0    0.0    0.0\n",
+      "2  1995-10-03  USS0010E03S  -20.0  18.0  -3.0  102.0  102.0\n",
+      "3  1995-10-04  USS0010E03S  -48.0  -2.0 -25.0    0.0  102.0\n",
+      "4  1995-10-05  USS0010E03S  -99.0  24.0 -40.0    0.0  102.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the 3961988.csv file\n",
+    "# df_3961988 = pd.read_csv('3961988.csv')\n",
+    "# print(df_3961988.head())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date      station  tmin  tmax  tavg  prcp  wesd\n",
+      "0  2024-12-31  USS0010E03S   NaN   NaN   NaN   NaN   4.4\n",
+      "1  2025-01-01  USS0010E03S   8.0  16.0  11.0   0.2   4.6\n",
+      "2  2025-01-02  USS0010E03S  11.0  25.0  20.0   0.4   5.1\n",
+      "3  2025-01-03  USS0010E03S  24.0  32.0  28.0   0.3   5.4\n",
+      "4  2025-01-04  USS0010E03S  19.0  28.0  24.0   0.1   5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select the required columns and rename them\n",
+    "# Select the required columns and rename them\n",
+    "# df_3961988_selected = df_3961988[['DATE', 'STATION', 'TMIN', 'TMAX', 'TAVG', 'PRCP', 'WESD']]\n",
+    "# df_3961988_selected.columns = ['date', 'station', 'tmin', 'tmax', 'tavg', 'prcp', 'wesd']\n",
+    "\n",
+    "# print(df_3961988_selected.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date      station   tmin  tmax  tavg   prcp   wesd\n",
+      "0  1995-10-01  USS0010E03S  -71.0  62.0  -1.0    0.0    0.0\n",
+      "1  1995-10-02  USS0010E03S -117.0  73.0 -21.0    0.0    0.0\n",
+      "2  1995-10-03  USS0010E03S  -20.0  18.0  -3.0  102.0  102.0\n",
+      "3  1995-10-04  USS0010E03S  -48.0  -2.0 -25.0    0.0  102.0\n",
+      "4  1995-10-05  USS0010E03S  -99.0  24.0 -40.0    0.0  102.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the noaa_data.csv file\n",
+    "# df_noaa_data = pd.read_csv('noaa_data.csv')\n",
+    "# print(df_noaa_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Headers are the same.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if list(df_3961988_selected.columns) == list(df_noaa_data.columns):\n",
+    "#     print(\"Headers are the same.\")\n",
+    "# else:\n",
+    "#     print(\"Headers are different.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             date      station   tmin  tmax  tavg   prcp   wesd\n",
+      "0      1995-10-01  USS0010E03S  -71.0  62.0  -1.0    0.0    0.0\n",
+      "1      1995-10-02  USS0010E03S -117.0  73.0 -21.0    0.0    0.0\n",
+      "2      1995-10-03  USS0010E03S  -20.0  18.0  -3.0  102.0  102.0\n",
+      "3      1995-10-04  USS0010E03S  -48.0  -2.0 -25.0    0.0  102.0\n",
+      "4      1995-10-05  USS0010E03S  -99.0  24.0 -40.0    0.0  102.0\n",
+      "...           ...          ...    ...   ...   ...    ...    ...\n",
+      "10611  2025-03-07  USS0010E03S   -1.0  32.0  15.0    0.0   10.2\n",
+      "10612  2025-03-08  USS0010E03S    8.0  38.0  22.0    0.0   10.2\n",
+      "10613  2025-03-09  USS0010E03S   19.0  40.0  27.0    0.0   10.2\n",
+      "10614  2025-03-10  USS0010E03S   15.0  38.0  26.0    0.0   10.2\n",
+      "10615  2025-03-11  USS0010E03S   15.0  40.0  26.0    0.0   10.2\n",
+      "\n",
+      "[10616 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df_noaa_data_combined = pd.concat([df_noaa_data, df_3961988_selected], ignore_index=True)\n",
+    "\n",
+    "# Drop duplicates based on the 'date' column\n",
+    "# df_noaa_data_combined.drop_duplicates(subset=['date'], keep='last', inplace=True)\n",
+    "\n",
+    "# print(df_noaa_data_combined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOAA data combined saved to noaa_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df_noaa_data_combined.to_csv('noaa_data.csv', index=False)\n",
+    "# print(\"NOAA data combined saved to noaa_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date      station   tmin  tmax  tavg   prcp   wesd\n",
+      "0  1995-10-01  USS0010E03S  -71.0  62.0  -1.0    0.0    0.0\n",
+      "1  1995-10-02  USS0010E03S -117.0  73.0 -21.0    0.0    0.0\n",
+      "2  1995-10-03  USS0010E03S  -20.0  18.0  -3.0  102.0  102.0\n",
+      "3  1995-10-04  USS0010E03S  -48.0  -2.0 -25.0    0.0  102.0\n",
+      "4  1995-10-05  USS0010E03S  -99.0  24.0 -40.0    0.0  102.0\n",
+      "             date      station  tmin  tmax  tavg  prcp  wesd\n",
+      "10611  2025-03-07  USS0010E03S  -1.0  32.0  15.0   0.0  10.2\n",
+      "10612  2025-03-08  USS0010E03S   8.0  38.0  22.0   0.0  10.2\n",
+      "10613  2025-03-09  USS0010E03S  19.0  40.0  27.0   0.0  10.2\n",
+      "10614  2025-03-10  USS0010E03S  15.0  38.0  26.0   0.0  10.2\n",
+      "10615  2025-03-11  USS0010E03S  15.0  40.0  26.0   0.0  10.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_noaa_data = pd.read_csv('noaa_data.csv')\n",
+    "print(df_noaa_data.head())\n",
+    "print(df_noaa_data.tail())"
+   ]
   }
  ],
  "metadata": {
