switched to different temp data

--- a/fetch_data.ipynb
+++ b/fetch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,6 +577,98 @@
     "df_noaa_data = pd.read_csv('noaa_data.csv')\n",
     "print(df_noaa_data.head())\n",
     "print(df_noaa_data.tail())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trying a different data source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       STATION                       NAME        DATE  PRCP  SNOW  SNWD  TAVG  \\\n",
+      "0  USW00024150  LIVINGSTON AIRPORT, MT US  1995-10-01  0.00   0.0   0.0   NaN   \n",
+      "1  USW00024150  LIVINGSTON AIRPORT, MT US  1995-10-02  0.00   0.0   0.0   NaN   \n",
+      "2  USW00024150  LIVINGSTON AIRPORT, MT US  1995-10-03  0.05   0.0   0.0   NaN   \n",
+      "3  USW00024150  LIVINGSTON AIRPORT, MT US  1995-10-04  0.02   0.0   0.0   NaN   \n",
+      "4  USW00024150  LIVINGSTON AIRPORT, MT US  1995-10-05  0.00   0.0   0.0   NaN   \n",
+      "\n",
+      "   TMAX  TMIN  \n",
+      "0  59.0  45.0  \n",
+      "1  57.0  27.0  \n",
+      "2  55.0  46.0  \n",
+      "3  50.0  36.0  \n",
+      "4  53.0  27.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the 3975156.csv file\n",
+    "df_3975156 = pd.read_csv('3975156.csv')\n",
+    "print(df_3975156.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             date      station  tmin  tmax  tavg  prcp  snow  snwd\n",
+      "0      1995-10-01  USW00024150  45.0  59.0   NaN  0.00   0.0   0.0\n",
+      "1      1995-10-02  USW00024150  27.0  57.0   NaN  0.00   0.0   0.0\n",
+      "2      1995-10-03  USW00024150  46.0  55.0   NaN  0.05   0.0   0.0\n",
+      "3      1995-10-04  USW00024150  36.0  50.0   NaN  0.02   0.0   0.0\n",
+      "4      1995-10-05  USW00024150  27.0  53.0   NaN  0.00   0.0   0.0\n",
+      "...           ...          ...   ...   ...   ...   ...   ...   ...\n",
+      "10385  2025-03-07  USW00024150  16.0  44.0   NaN  0.00   NaN   NaN\n",
+      "10386  2025-03-08  USW00024150  32.0  56.0   NaN  0.00   NaN   NaN\n",
+      "10387  2025-03-09  USW00024150  40.0  59.0   NaN  0.00   NaN   NaN\n",
+      "10388  2025-03-10  USW00024150  34.0  59.0   NaN  0.00   NaN   NaN\n",
+      "10389  2025-03-11  USW00024150  25.0  59.0   NaN  0.00   NaN   NaN\n",
+      "\n",
+      "[10390 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the noaa_data list of dictionaries into a DataFrame\n",
+    "df_noaa = pd.DataFrame(df_3975156)\n",
+    "\n",
+    "# Select the required columns and rename them\n",
+    "df_noaa = df_noaa[['DATE', 'STATION', 'TMIN', 'TMAX', 'TAVG', 'PRCP', 'SNOW', 'SNWD']]\n",
+    "df_noaa.columns = ['date', 'station', 'tmin', 'tmax', 'tavg', 'prcp', 'snow', 'snwd']\n",
+    "print(df_noaa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df_noaa has been saved to noaa_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_noaa.to_csv('noaa_data.csv', index=False)\n",
+    "print(\"df_noaa has been saved to noaa_data.csv\")"
    ]
   }
  ],
