moving files  to folders

--- a/project_yellowstone.ipynb
+++ b/project_yellowstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +63,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_765122/150409553.py:1: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  discharge_data=pd.read_csv('yellowstone6192500.csv')\n"
+      "/tmp/ipykernel_1263933/4076595470.py:1: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  discharge_data=pd.read_csv('data/yellowstone6192500.csv')\n"
      ]
     }
    ],
    "source": [
-    "discharge_data=pd.read_csv('yellowstone6192500.csv')\n",
+    "discharge_data=pd.read_csv('data/yellowstone6192500.csv')\n",
     "\n",
     "discharge_data['datetime'] = pd.to_datetime(discharge_data['datetime'])\n",
     "\n",
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "snow_data=pd.read_csv('snotel_data.csv')\n",
+    "snow_data=pd.read_csv('data/snotel_data.csv')\n",
     "\n",
     "snow_data['datetime'] = pd.to_datetime(snow_data['date'])\n",
     "\n",
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "noaa_data=pd.read_csv('noaa_data.csv')\n",
+    "noaa_data=pd.read_csv('data/noaa_data.csv')\n",
     "\n",
     "noaa_data['datetime'] = pd.to_datetime(noaa_data['date'])\n",
     "\n",
@@ -657,7 +657,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "399fd96f-0870-4f4c-a71b-7aa83fc51a3a",
+       "ref": "281fd6f3-0017-41c8-9181-b45f0c463aa8",
        "rows": [
         [
          "0",
@@ -859,7 +859,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "51fa1ad8-355a-4861-a14a-ccd2718f4aa2",
+       "ref": "84a20a56-cefc-4306-ac97-1af4732bce0c",
        "rows": [
         [
          "1995",
@@ -1626,7 +1626,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e58a11e8-5113-46de-b99a-a0d8e637b241",
+       "ref": "54a85e4f-33dd-49ba-b8e1-f13b67168a5c",
        "rows": [
         [
          "0",
@@ -2109,17 +2109,17 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x718499797020>,\n",
-       "  <matplotlib.axis.XTick at 0x7184996fc050>,\n",
-       "  <matplotlib.axis.XTick at 0x71849c85ca70>,\n",
-       "  <matplotlib.axis.XTick at 0x7184997dfd40>,\n",
-       "  <matplotlib.axis.XTick at 0x71849c901010>,\n",
-       "  <matplotlib.axis.XTick at 0x71849ca68da0>,\n",
-       "  <matplotlib.axis.XTick at 0x718499577890>,\n",
-       "  <matplotlib.axis.XTick at 0x71849ca68320>,\n",
-       "  <matplotlib.axis.XTick at 0x71849ca69460>,\n",
-       "  <matplotlib.axis.XTick at 0x71849ca682c0>,\n",
-       "  <matplotlib.axis.XTick at 0x71849ca6b380>],\n",
+       "([<matplotlib.axis.XTick at 0x7b90c8f65d30>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c8fc5e50>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90ca0c36b0>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c8e49e80>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c8573710>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c8573fb0>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c85a49b0>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90ca044380>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c85a5100>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c85a5a90>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c85a6450>],\n",
        " [Text(0, 0, '1'),\n",
        "  Text(5, 0, '6'),\n",
        "  Text(10, 0, '11'),\n",
@@ -2165,17 +2165,17 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x71849c9e5a90>,\n",
-       "  <matplotlib.axis.XTick at 0x718499227380>,\n",
-       "  <matplotlib.axis.XTick at 0x71849cb9d790>,\n",
-       "  <matplotlib.axis.XTick at 0x71849936fa40>,\n",
-       "  <matplotlib.axis.XTick at 0x718499255be0>,\n",
-       "  <matplotlib.axis.XTick at 0x7184992565d0>,\n",
-       "  <matplotlib.axis.XTick at 0x718499256f90>,\n",
-       "  <matplotlib.axis.XTick at 0x718499256810>,\n",
-       "  <matplotlib.axis.XTick at 0x7184992577a0>,\n",
-       "  <matplotlib.axis.XTick at 0x7184992781d0>,\n",
-       "  <matplotlib.axis.XTick at 0x718499278bf0>],\n",
+       "([<matplotlib.axis.XTick at 0x7b90c847ab70>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c8112030>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c824b6b0>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c853f950>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c8f67560>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c81490a0>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c8149af0>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c814a510>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c814aea0>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c814a870>,\n",
+       "  <matplotlib.axis.XTick at 0x7b90c814b6b0>],\n",
        " [Text(0, 0, '1'),\n",
        "  Text(5, 0, '6'),\n",
        "  Text(10, 0, '11'),\n",
@@ -2459,7 +2459,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_765122/3567584859.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_1263933/3567584859.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -3273,7 +3273,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x718498baf2c0>"
+       "<matplotlib.legend.Legend at 0x7b90c78d6b70>"
       ]
      },
      "execution_count": 58,
@@ -3307,7 +3307,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x718498b2d100>"
+       "<matplotlib.legend.Legend at 0x7b90c7584e00>"
       ]
      },
      "execution_count": 59,
@@ -3341,7 +3341,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x718498296450>"
+       "<matplotlib.legend.Legend at 0x7b90c75e43e0>"
       ]
      },
      "execution_count": 60,
@@ -3382,7 +3382,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x718498247170>"
+       "<matplotlib.legend.Legend at 0x7b90c761a780>"
       ]
      },
      "execution_count": 61,
